@@ -1,4 +1,4 @@
-GNU C Library NEWS -- history of user-visible changes.  2011-4-16
+GNU C Library NEWS -- history of user-visible changes.  2011-4-17
 Copyright (C) 1992-2009, 2010, 2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
@@ -18,8 +18,8 @@ Version 2.14
 
 * The following bugs are resolved with this release:
 
-  11724, 12445, 12454, 12460, 12469, 12489, 12509, 12510, 12518, 12583, 12587,
-  12597, 12631, 12650, 12655
+  11724, 12420, 12445, 12454, 12460, 12469, 12489, 12509, 12510, 12518, 12583,
+  12587, 12597, 12631, 12650, 12655
 
 Version 2.13
 
